Minor QoL changes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <label for="cin_vname">Venue:</label>
                     <input type="text" class="form-control" id="cin_vname" readonly>
                 </div>
-                <label for="cin_fname" class="padding">Users:</label>
+                <label for="cin_fname" class="padding">Users (Click a user to remove it from the list):</label>
                 <div class="list-group standard-div" id="cin_fname">
 
                 </div>
