--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <nav class="navbar navbar-inverse navbar-custom">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main_navbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand navbar-title">Track and Trace</a>
         </div>
-        <div class="collapse navbar-collapse" id="main_navbar">
+        <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a id="alertsTab" data-toggle="tab" href="#alerts">Alerts </a></li>
                 <li><a id="reportTab" data-toggle="tab" href="#report">Report Case of COVID-19</a></li>
@@ -150,11 +150,11 @@
                 <input type="datetime-local" id="checkinDatePicker">
 
                 <div class="form-group">
-                    <label for="cin_vname">Venue:</label>
-                    <input type="text" class="form-control" id="cin_vname" readonly>
+                    <label for="checkinVName">Venue:</label>
+                    <input type="text" class="form-control" id="checkinVName" readonly>
                 </div>
-                <label for="cin_fname" class="padding">Users (Click a user to remove it from the list):</label>
-                <div class="list-group standard-div" id="cin_fname">
+                <label for="checkinFName" class="padding">Users (Click a user to remove it from the list):</label>
+                <div class="list-group standard-div" id="checkinFName">
 
                 </div>
                 <input type="submit" class="btn btn-secondary" onclick="submitCheckIn(); return false;" value="Check-In">
@@ -172,7 +172,7 @@
                 <label>
                     <input id="userDataSearchBar" type="text" class="padding" placeholder="Search..">
                 </label>
-                <div class="list-group standard-div" id="see_user_data_list">
+                <div class="list-group standard-div" id="seeUserDataList">
 
                 </div>
             </div>
@@ -181,31 +181,31 @@
                 <label>
                     <input id="venueDataSearchBar" type="text" class="padding" placeholder="Search..">
                 </label>
-                <div class="list-group standard-div" id="see_venue_data_list">
+                <div class="list-group standard-div" id="seeVenueDataList">
 
                 </div>
             </div>
             <table class="table standard-div">
                 <thead>
-                    <tr id="viewdata_table_columns">
+                    <tr id="viewDataTableColumns">
                         <th scope="col">User</th>
                         <th scope="col">Datetime</th>
                     </tr>
                 </thead>
-                <tbody id="viewdata_table">
+                <tbody id="viewDataTable">
 
                 </tbody>
             </table>
 
     </div>
 </div>
-<script src="BootstrapSearchBarListFunctionality.js"></script>
-<script src="ErrorMessageFunctionality.js"></script>
-<script src="SeeAlertsSection.js"></script>
-<script src="ReportCaseSection.js"></script>
-<script src="addNewEntitiesSection.js"></script>
-<script src="checkInSection.js"></script>
-<script src="viewCheckInsSection.js"></script>
+<script src="bootstrap-searchbar-list-functionality.js"></script>
+<script src="error-message-functionality.js"></script>
+<script src="see-alerts-section.js"></script>
+<script src="report-case-section.js"></script>
+<script src="add-new-entities-section.js"></script>
+<script src="checkin-section.js"></script>
+<script src="view-checkin-section.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
