Added loading text for alert section and stopped tables overflowing.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div id="alerts" class="tab-pane fade in active">
         <div class="standard-div">
             <h3>List of All Users Who Should Self Isolate!</h3>
+            <h4 id="alertsLoading"></h4>
             <table class="table standard-div">
                 <thead>
                     <tr>
