--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
             </div>
             <form id="checkInForm">
                 <label for="checkinDatePicker" class="padding">Date and Time of Check In:</label>
-                <input type="datetime-local" id="checkinDatePicker">
+                <div class="padding">
+                    <input type="date" id="checkinDatePicker">
+                    <input type="time" id="checkinTimePicker">
+                </div>
 
                 <div class="form-group">
                     <label for="checkinVName">Venue:</label>
